# exp-pairs

./: .gitignore  .travis.yml  CHANGELOG.md  ExpPairs.hs  Makefile  PathTest.hs  README.md  Tests.hs  exp-hull.hs  exp-pairs.cabal  stack.yaml  tests.hs
.github/workflows/: haskell-ci.yml
ExpPairs/: Graham.hs  Ivic.hs  Kratzel.hs  LinearForm.hs  Matrix3.hs  MenzerNowak.hs  Optimize.hs  Pair.hs  Process.hs  RatioInf.hs  Tests.hs
ExpPairs/Tests/: Ivic.hs  Kratzel.hs  LinearForm.hs  Matrix3.hs  MenzerNowak.hs  Pair.hs  RatioInf.hs  etalon-mOnS.txt  etalon-tauab.txt  etalon-tauabc.txt  etalon-zetaOnS.txt
Math/: ExpPairs.hs
Math/ExpPairs/: Ivic.hs  Kratzel.hs  LinearForm.hs  Matrix3.hs  MenzerNowak.hs  Pair.hs  PrettyProcess.hs  Process.hs  ProcessMatrix.hs  RatioInf.hs  Tests.hs
Math/ExpPairs/Tests/: Ivic.hs  LinearForm.hs  MenzerNowak.hs  Pair.hs  RatioInf.hs  etalon-mOnS.txt  etalon-zetaOnS.txt
aux/: benchMatrix.hs  optimizeSum.hs
auxiliary/: BenchMatrix.hs  OptimizeSum.hs  benchMatrix.hs  optimizeSum.hs
tests/: Etalon.hs  Instances.hs  Ivic.hs  Kratzel.hs  LinearForm.hs  Matrix3.hs  MenzerNowak.hs  Pair.hs  PathTest.hs  PrettyProcess.hs  Process.hs  RatioInf.hs  Tests.hs  etalon-mOnS.txt
