name:                exp-pairs
version:             0.1.0.0
synopsis:            Linear programming over exponent pairs
description:         Package implements an algorithm to minimize rational objective function over the set of exponent pairs
homepage:            https://github.com/Bodigrim/exp-pairs
license:             GPL-3
license-file:        LICENSE
author:              Andrew Lelechenko
maintainer:          andrew.lelechenko@gmail.com
category:            Math
build-type:          Simple
cabal-version:       >=1.8

source-repository head
  type:     git
  location: git://github.com/Bodigrim/exp-pairs.git

library
  exposed-modules:     ExpPairs,
                       ExpPairs.Ivic,
                       ExpPairs.Kratzel,
                       ExpPairs.MenzerNowak
  other-modules:       ExpPairs.LinearForm,
                       ExpPairs.Matrix3,
                       ExpPairs.Optimize,
                       ExpPairs.Pair,
                       ExpPairs.Process,
                       ExpPairs.RatioInf
  build-depends:       base >=4 && <5,
                       memoize >=0.1,
                       matrix >=0.1

test-suite tests
  ghc-options: -Wall
  type: exitcode-stdio-1.0
  main-is: ExpPairs/Tests.hs
  build-depends:       base >=4 && <5,
                       QuickCheck >=2.4.2,
                       smallcheck >=0.2.1,
                       exp-pairs,
                       memoize >=0.1,
                       matrix >=0.1
