name:                exp-pairs
version:             0.2.0.0
synopsis:            Linear programming over exponent pairs
description:         Package implements an algorithm to minimize rational objective function over the set of exponent pairs
homepage:            https://github.com/Bodigrim/exp-pairs
license:             GPL-3
license-file:        LICENSE
author:              Andrew Lelechenko
maintainer:          andrew.lelechenko@gmail.com
category:            Math
build-type:          Simple
extra-source-files:  CHANGELOG.md, tests/*.txt
cabal-version:       >=1.10
tested-with:
  GHC ==7.10.3 GHC ==8.0.2 GHC ==8.2.2 GHC ==8.4.4 GHC ==8.6.5 GHC ==8.8.3 GHC ==8.10.1

source-repository head
  type:     git
  location: git://github.com/Bodigrim/exp-pairs.git

library
  exposed-modules:     Math.ExpPairs,
                       Math.ExpPairs.Ivic,
                       Math.ExpPairs.Kratzel,
                       Math.ExpPairs.MenzerNowak
                       Math.ExpPairs.LinearForm,
                       Math.ExpPairs.Matrix3,
                       Math.ExpPairs.Pair,
                       Math.ExpPairs.Process,
                       Math.ExpPairs.PrettyProcess,
                       Math.ExpPairs.ProcessMatrix,
                       Math.ExpPairs.RatioInf
  build-depends:       base >=4.8 && <5,
                       ghc-prim,
                       prettyprinter,
                       deepseq >=1.3,
                       containers
  if impl(ghc < 8.0)
    build-depends:     semigroups >= 0.8
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-type-defaults

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  other-modules:       Etalon,
                       Instances,
                       Ivic,
                       Kratzel,
                       LinearForm,
                       Matrix3,
                       MenzerNowak,
                       Pair,
                       Process,
                       PrettyProcess,
                       RatioInf
  build-depends:       base,
                       tasty >=0.7,
                       tasty-quickcheck,
                       tasty-smallcheck,
                       tasty-hunit,
                       QuickCheck >=2.9,
                       smallcheck >=0.2.1,
                       exp-pairs,
                       matrix >=0.1,
                       random
  hs-source-dirs:      tests
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-type-defaults
